<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/BSave"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="serReq"
            android:text="@string/SerReq"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BCancel"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="ReadCancel"
            android:text="@string/ContInfo"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/BSave"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="ReadSave"
            android:text="@string/Manuals"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BCancel"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="ReadCancel"
            android:text="@string/RentHist"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>