<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/BSave"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#e67f24"
            android:onClick="serReq"
            android:text="@string/SerReq"
            android:textColor="@android:color/white"
            android:textSize="17dp" />

        <Button
            android:id="@+id/BCancel"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#3CB371"
            android:onClick="ReadCancel"
            android:text="@string/ContInfo"
            android:textColor="@android:color/white"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/BSave"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#1cbc9d"
            android:onClick="DisHouses"
            android:text="@string/Houses"
            android:textColor="@android:color/white"
            android:textSize="17dp" />

        <Button
            android:id="@+id/BCancel"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#96a6a7"
            android:onClick="DisTeants"
            android:text="@string/Teants"
            android:textColor="@android:color/white"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/ServOrd"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#B8860B"
            android:onClick="ServOrd"
            android:text="Service Orders"
            android:textColor="@android:color/white"
            android:textSize="17dp" />

        <Button
            android:id="@+id/ServPers"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#4169E1"
            android:onClick="ServPers"
            android:text="Service Persons"
            android:textColor="@android:color/white"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>